--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj
@@ -117,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\BaseApplication.h" />
+    <ClInclude Include="include\BuildingBlock.h" />
     <ClInclude Include="include\Havok.h" />
     <ClInclude Include="include\Physics.h" />
     <ClInclude Include="include\Player.h" />
