Basic cube object [RRF-3], able to pickup and throw cubes [RRF-12]

--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="include\Havok.h" />
     <ClInclude Include="include\Physics.h" />
     <ClInclude Include="include\Player.h" />
+    <ClInclude Include="include\Qube.h" />
     <ClInclude Include="include\RWM_P5.h" />
     <ClInclude Include="include\stdafx.h" />
     <ClInclude Include="res\Resource.h" />
@@ -129,6 +130,7 @@
     <ClCompile Include="src\BaseApplication.cpp" />
     <ClCompile Include="src\Physics.cpp" />
     <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Qube.cpp" />
     <ClCompile Include="src\RWM_P5.cpp" />
     <ClCompile Include="src\stdafx.cpp" />
   </ItemGroup>
