SeeSaw implemented [RRF-6]

--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Qube.h" />
     <ClInclude Include="include\RWM_P5.h" />
+    <ClInclude Include="include\SeeSaw.h" />
     <ClInclude Include="include\stdafx.h" />
     <ClInclude Include="res\Resource.h" />
   </ItemGroup>
@@ -132,6 +133,7 @@
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Qube.cpp" />
     <ClCompile Include="src\RWM_P5.cpp" />
+    <ClCompile Include="src\SeeSaw.cpp" />
     <ClCompile Include="src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
