--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="include\SeeSaw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\LevelManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\RWM_P5.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\SeeSaw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="include\LevelManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
