--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="include\Pulley.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Extrusion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\RWM_P5.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Pulley.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Extrusion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
