--- a/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
+++ b/RWM_P5/RWM_P5/RWM_P5.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="include\Extrusion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\XInputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\RWM_P5.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Extrusion.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\XInputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
